--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -63,7 +63,7 @@ i {
 }
 
 p {
-  margin: 0 0 _size(element-margin) 0;
+  margin: 0 0 _size(element-margin) * 0.2 0;
 }
 
 h1,
@@ -75,7 +75,7 @@ h6 {
   color: _palette(fg-bold);
   font-weight: _font(weight-bold);
   line-height: 1.65;
-  margin: 0 0 (_size(element-margin) * 0.5) 0;
+  margin: 0 0 (_size(element-margin) * 0.2) 0;
 
   a {
     color: inherit;
@@ -147,6 +147,8 @@ code {
   font-size: 0.9em;
   margin: 0 0.25em;
   padding: 0.25em 0.65em;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 pre {
@@ -159,7 +161,9 @@ pre {
     display: block;
     line-height: 1.75;
     padding: 1em 1.5em;
-    overflow-x: auto;
+    overflow: auto;
+    word-break: break-all;
+    word-wrap: break-word;
   }
 }
 
