스타일 변경

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -38,7 +38,7 @@ a {
       'border-bottom-color #{_duration(transition)} ease-in-out'
     )
   );
-  color: #bac8ff;
+  color: #9775fa;
   text-decoration: none;
 
   &:hover {
