--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -30,15 +30,15 @@
 
 // Palette.
 	$palette: (
-		bg:					#242943,
+		bg:					#fdfdfd,
 		bg-alt:				#2a2f4a,
-		fg:					#ffffff,
-		fg-bold:			#ffffff,
-		fg-light:			rgba(244,244,255,0.2),
-		border:				rgba(212,212,255,0.1),
-		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
+		fg:					#000000,
+		fg-bold:			#000000,
+		fg-light:			rgba(20,20,20,0.8),
+		border:				rgba(10,10,10,0.4),
+		border-bg:			rgba(10,10,10,0.35),
+		highlight:			#7048e8,
+		accent1:			#b197fc,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
 		accent4:			#e7b788,
