--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -14,7 +14,8 @@
 	#header {
 		@include vendor('display', 'flex');
 		background-color: _palette(bg-alt);
-		box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.15);
+		box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.25);
+		border-bottom: 0.2em solid rgba(10,10,10,0.25);
 		cursor: default;
 		font-weight: _font(weight-bold);
 		height: 3.25em;
