--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -31,7 +31,7 @@
 // Palette.
 	$palette: (
 		bg:					#fdfdfd,
-		bg-alt:				#2a2f4a,
+		bg-alt:				#fdfdfd,
 		fg:					#000000,
 		fg-bold:			#000000,
 		fg-light:			rgba(20,20,20,0.8),
