--- a/src/assets/scss/layout/_contact.scss
+++ b/src/assets/scss/layout/_contact.scss
@@ -9,6 +9,8 @@
 	#contact {
 		border-bottom: solid 1px _palette(border);
 		overflow-x: hidden;
+		margin-top: 2rem;
+		border-top: 1px solid rgba(10, 10, 10, 0.4);
 
 		> .inner {
 			@include vendor('display', 'flex');
