--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -32,11 +32,11 @@ textarea {
 
 a {
   @include vendor(
-    'transition',
-    (
-      'color #{_duration(transition)} ease-in-out',
-      'border-bottom-color #{_duration(transition)} ease-in-out'
-    )
+                  'transition',
+                          (
+                                  'color #{_duration(transition)} ease-in-out',
+                                  'border-bottom-color #{_duration(transition)} ease-in-out'
+                          )
   );
   color: #9775fa;
   text-decoration: none;
@@ -137,8 +137,7 @@ blockquote {
   border-left: solid 4px _palette(border);
   font-style: italic;
   margin: 0 0 _size(element-margin) 0;
-  padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4)
-    _size(element-margin);
+  padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
 }
 
 code {
