--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -1,47 +1,47 @@
 // Misc.
-	$misc: (
-		z-index-base:		10000
-	);
+$misc: (
+        z-index-base: 10000
+);
 
 // Duration.
-	$duration: (
-		menu:				0.35s,
-		transition:			0.2s,
-		banner:				2.5s
-	);
+$duration: (
+        menu: 0.35s,
+        transition: 0.2s,
+        banner: 2.5s
+);
 
 // Size.
-	$size: (
-		border-radius:		4px,
-		element-height:		2.75em,
-		element-margin:		2em,
-		inner:				65em
-	);
+$size: (
+        border-radius: 4px,
+        element-height: 2.75em,
+        element-margin: 2em,
+        inner: 65em
+);
 
 // Font.
-	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
-		family-fixed:		('Courier New', monospace),
-		weight:				300,
-		weight-bold:		600,
-		letter-spacing:		0.025em,
-		letter-spacing-alt:	0.25em
-	);
+$font: (
+        family: ('Source Sans Pro', Helvetica, sans-serif),
+        family-fixed: ('Courier New', monospace),
+        weight: 300,
+        weight-bold: 600,
+        letter-spacing: 0.025em,
+        letter-spacing-alt: 0.25em
+);
 
 // Palette.
-	$palette: (
-		bg:					#fdfdfd,
-		bg-alt:				#fdfdfd,
-		fg:					#000000,
-		fg-bold:			#000000,
-		fg-light:			rgba(20,20,20,0.8),
-		border:				rgba(10,10,10,0.4),
-		border-bg:			rgba(10,10,10,0.35),
-		highlight:			#7048e8,
-		accent1:			#b197fc,
-		accent2:			#8d82c4,
-		accent3:			#ec8d81,
-		accent4:			#e7b788,
-		accent5:			#8ea9e8,
-		accent6:			#87c5a4
-	);
+$palette: (
+        bg: #fdfdfd,
+        bg-alt: #fdfdfd,
+        fg: #000000,
+        fg-bold: #000000,
+        fg-light: rgba(20, 20, 20, 0.8),
+        border: rgba(10, 10, 10, 0.4),
+        border-bg: rgba(10, 10, 10, 0.35),
+        highlight: #7048e8,
+        accent1: #b197fc,
+        accent2: #8d82c4,
+        accent3: #ec8d81,
+        accent4: #e7b788,
+        accent5: #8ea9e8,
+        accent6: #87c5a4
+);
